fix overflow

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -11136,6 +11136,7 @@ body.page-template-page-race {
 		background-position: center;
 		background-repeat: no-repeat;
 		background-color: #f7f6f6;
+		overflow: hidden;
 		img.rectangle-spacer {
 			width: 100%;
 			height: auto;
